--- a/site/styles.css
+++ b/site/styles.css
@@ -76,8 +76,9 @@ main {
 }
 
 .toolbar {
+  position: -webkit-sticky;
   position: sticky;
-  top: 0;
+  top: max(env(safe-area-inset-top), 0px);
   z-index: 20;
   display: flex;
   align-items: center;
